# LegacyLens

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: ARCHITECTURE.md  RUNNING.md
src/legacylens/: __init__.py  cli.py  config.py  context.py  engine.py  facts.py  hotspots.py  i18n.py  language.py  llm.py  models.py  response_cache.py  server.py
src/legacylens/analyzers/: README.md  __init__.py  assembly.py  base.py  c_like.py  cobol.py  fortran.py  mainstream.py  unknown.py
src/legacylens/data/: legacy_facts.jsonl
tests/: test_analyzers.py  test_config.py  test_context.py  test_engine.py  test_i18n.py  test_language_support.py  test_llm.py  test_server_stream.py
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
