[project]
name = "legacylens"
version = "0.1.0"
description = "Local backend for explaining legacy code idioms with historical context."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.optional-dependencies]
parsers = [
    "antlr4-python3-runtime>=4.13.0",
    "capstone>=5.0.0",
    "tree-sitter>=0.22.0",
]
rag = [
    "chromadb>=0.5.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
legacylens = "legacylens.cli:main"

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
legacylens = ["data/*.jsonl"]
